--- a/Find One/Assest&fonts/Base.lproj/LaunchScreen.storyboard
+++ b/Find One/Assest&fonts/Base.lproj/LaunchScreen.storyboard
@@ -1,25 +1,98 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="manrope-regular.otf">
+            <string>Manrope-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5kH-DX-68p">
+                                <rect key="frame" x="46.666666666666657" y="301" width="300" height="250"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="el9-1c-B6g">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="250"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b1L-fp-Ufd">
+                                                <rect key="frame" x="0.0" y="0.0" width="300" height="215"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="QgM-0j-06S">
+                                                        <rect key="frame" x="0.0" y="0.0" width="300" height="215"/>
+                                                    </imageView>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="QgM-0j-06S" secondAttribute="bottom" id="IS2-sC-4tI"/>
+                                                    <constraint firstItem="QgM-0j-06S" firstAttribute="leading" secondItem="b1L-fp-Ufd" secondAttribute="leading" id="Nwx-H3-c8J"/>
+                                                    <constraint firstAttribute="trailing" secondItem="QgM-0j-06S" secondAttribute="trailing" id="jps-bY-LqZ"/>
+                                                    <constraint firstItem="QgM-0j-06S" firstAttribute="top" secondItem="b1L-fp-Ufd" secondAttribute="top" id="pK1-PB-4Uh"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dNS-6E-n8S">
+                                                <rect key="frame" x="0.0" y="220" width="300" height="30"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose the Best Institution for You! " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rbc-J4-NFs">
+                                                        <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
+                                                        <fontDescription key="fontDescription" name="Manrope-Regular" family="Manrope" pointSize="17"/>
+                                                        <color key="textColor" red="0.44705882349999998" green="0.70980392160000005" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="26m-6R-WIY"/>
+                                                    <constraint firstAttribute="trailing" secondItem="Rbc-J4-NFs" secondAttribute="trailing" id="FRt-Xa-9o4"/>
+                                                    <constraint firstItem="Rbc-J4-NFs" firstAttribute="leading" secondItem="dNS-6E-n8S" secondAttribute="leading" id="JEs-iW-53u"/>
+                                                    <constraint firstItem="Rbc-J4-NFs" firstAttribute="top" secondItem="dNS-6E-n8S" secondAttribute="top" id="gJb-KZ-j08"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Rbc-J4-NFs" secondAttribute="bottom" id="nEV-Yq-Kmc"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="el9-1c-B6g" firstAttribute="top" secondItem="5kH-DX-68p" secondAttribute="top" id="Gdb-tc-BqO"/>
+                                    <constraint firstAttribute="trailing" secondItem="el9-1c-B6g" secondAttribute="trailing" id="Px7-bB-Bmd"/>
+                                    <constraint firstAttribute="bottom" secondItem="el9-1c-B6g" secondAttribute="bottom" id="QDv-63-60w"/>
+                                    <constraint firstItem="el9-1c-B6g" firstAttribute="leading" secondItem="5kH-DX-68p" secondAttribute="leading" id="lMz-Yd-Ivm"/>
+                                    <constraint firstAttribute="width" constant="300" id="pmi-Ee-bC7"/>
+                                    <constraint firstAttribute="height" constant="250" id="yzl-bz-mXB"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5kH-DX-68p" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="5r9-hl-Mos"/>
+                            <constraint firstItem="5kH-DX-68p" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="tP0-p0-Bs8"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.671755725190835" y="374.64788732394368"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="186" height="176"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
