--- a/Find One/Storyboard/Base.lproj/Auth.storyboard
+++ b/Find One/Storyboard/Base.lproj/Auth.storyboard
@@ -469,7 +469,7 @@
                                                                                 <subviews>
                                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cnw-tA-iR1">
                                                                                         <rect key="frame" x="46.666666666666657" y="0.0" width="300" height="44"/>
-                                                                                        <color key="backgroundColor" red="0.082352941176470587" green="0.61176470588235299" blue="0.58431372549019611" alpha="1" colorSpace="calibratedRGB"/>
+                                                                                        <color key="backgroundColor" red="0.44705882349999998" green="0.70980392160000005" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                                                                                         <constraints>
                                                                                             <constraint firstAttribute="width" constant="300" id="Erd-cI-z5s"/>
                                                                                         </constraints>
@@ -967,7 +967,7 @@
                                                                                 <subviews>
                                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Cp-Fy-0Nc">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
-                                                                                        <color key="backgroundColor" red="0.08235294118" green="0.61176470589999998" blue="0.58431372550000005" alpha="1" colorSpace="calibratedRGB"/>
+                                                                                        <color key="backgroundColor" red="0.44705882349999998" green="0.70980392160000005" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                                                                                         <fontDescription key="fontDescription" name="Outfit-Medium" family="Outfit" pointSize="18"/>
                                                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                                                         <state key="normal" title="LOGIN">
@@ -1426,7 +1426,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="UNP-cu-rMh"/>
+        <segue reference="7YQ-yO-sD4"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Google (1)" width="21" height="21"/>
